Fixed cookie notice flickering

--- a/view/frontend/web/css/source/_module.less
+++ b/view/frontend/web/css/source/_module.less
@@ -6,6 +6,10 @@
     .breadcrumbs {
         min-height: 18px;
     }
+
+    #notice-cookie-block:not([style]) {
+        display: none;
+    }
 }
 
 @import 'components/_gallery.less';
